I have pushed the HERO SECTION

--- a/index.html
+++ b/index.html
@@ -52,6 +52,24 @@
                 </div>
             </div>
          </section>
+
+         <!--HERO SECTION-->
+        <section class="hero-section">
+            <div class="section-content">
+                <div class="hero-details">
+                    <h2 class="title">Beyond Bindu</h2>
+                    <h3 class="subtitle">"Beyond Boundaries, Within Harmony"</h3>
+                    <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, itaque pariatur! Et dolorem aperiam, vitae dosunt molestias et asperiores? Esse, molestias? Tempore!</p>
+                    <div class="buttons">
+                        <a href="#" class="button NEWS">NEWS</a>
+                        <a href="#" class="button UPCOMING EVENTS">UPCOMING EVENTS</a>
+                    </div>
+                </div> 
+                <div class="hero-image-wrapper">
+                    <img src="images\theatre.jpg" alt="Hero" class="hero-image">
+                </div>            
+            </div>
+        </section>
     </main>
 </body>
 </html>
