fixed the hero section

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <section id="home">
+    <div class="hero-background">
     <header>
         <img src="bindu.png" class="hello">
         <nav class="navbar section-content">
@@ -40,6 +42,23 @@
         </nav>
     </header>
     <main>
+         <!--HERO SECTION-->
+         <section class="hero-section">
+            <div class="section-content">
+                <div class="hero-details">
+                    <h2 class="title">Beyond Bindu</h2>
+                    <h3 class="subtitle">"Beyond Boundaries, Within Harmony"</h3>
+                    <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, itaque pariatur! Et dolorem aperiam, vitae dosunt molestias et asperiores? Esse, molestias? Tempore!</p>
+                    <div class="buttons">
+                        <a href="#" class="button NEWS">NEWS</a>
+                        <a href="#" class="button UPCOMING-EVENTS">UPCOMING EVENTS</a>
+                    </div>
+                </div>            
+            </div>
+        </section>
+    </div>
+</section>
+<section id="about">
         <!-- About section -->
          <section class="about-section">
             <div class="section-content">
@@ -60,22 +79,16 @@
             </div>
          </section>
 
-         <!--HERO SECTION-->
-        <section class="hero-section">
+         <!--Menu section-->
+         <section class="menu-section">
             <div class="section-content">
-                <div class="hero-details">
-                    <h2 class="title">Beyond Bindu</h2>
-                    <h3 class="subtitle">"Beyond Boundaries, Within Harmony"</h3>
-                    <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, itaque pariatur! Et dolorem aperiam, vitae dosunt molestias et asperiores? Esse, molestias? Tempore!</p>
-                    <div class="buttons">
-                        <a href="#" class="button NEWS">NEWS</a>
-                        <a href="#" class="button UPCOMING-EVENTS">UPCOMING EVENTS</a>
-                    </div>
-                </div> 
-                <div class="hero-image-wrapper">
-                    <img src="theatre1.jpg" alt="Hero" class="hero-image">
-                </div>            
+                <ul class="menu-list">
+                    <li class="menu-item">
+                        <img src=""
+                    </li>
+                </ul>
             </div>
+         </section>
         </section>
     </main>
 
