--- a/index.html
+++ b/index.html
@@ -128,6 +128,38 @@
                 </div>
             </div>
         </section>
+        <!--gallery section-->
+        <section class="gallery-section">
+            <h2 class="section-title">Gallery</h2>
+            <div class="section-content">
+                <ul class="gallery-list">
+                    <li class="gallery-item">
+                        <img src="gal1.png" alt="Gallery"
+                        class="gallery-image">
+                    </li>
+                    <li class="gallery-item">
+                        <img src="gal2.png" alt="Gallery"
+                        class="gallery-image">
+                    </li>
+                    <li class="gallery-item">
+                        <img src="gal3.jpg" alt="Gallery"
+                        class="gallery-image">
+                    </li>
+                    <li class="gallery-item">
+                        <img src="gal4.jpg" alt="Gallery"
+                        class="gallery-image">
+                    </li>
+                    <li class="gallery-item">
+                        <img src="gal5.jpg" alt="Gallery"
+                        class="gallery-image">
+                    </li>
+                    <li class="gallery-item">
+                        <img src="gal6.png" alt="Gallery"
+                        class="gallery-image">
+                    </li>
+                </ul>
+            </div>
+        </section>
     </main>
     
     <!--linking swipper script-->
