--- a/index.html
+++ b/index.html
@@ -166,28 +166,20 @@
             <div class="section-content">
                 <ul class="contact-info-list">
                     <li class="contact-info">
-                        <i class="fa-solid fa-location-crosshairs"></i>
-                        <p>123 Campsite Avenue, Wilderness, CA 98765</p>
+                        <i class="fa-solid fa-location-crosshairs"></i>📍
+                        <p>Assam University, 788011</p>
                     </li>
                     <li class="contact-info">
-                        <i class="fa-solid fa-location-crosshairs"></i>
-                        <p>info@coffeeshopwebsite.com</p>
+                        <i class="fa-solid fa-location-crosshairs"></i>📞
+                        <p><a href="ph:+916003445077">+91 6003445077</a></p>
                     </li>
                     <li class="contact-info">
-                        <i class="fa-solid fa-location-crosshairs"></i>
-                        <p>(123) 456-78909</p>
+                        <i class="fa-solid fa-location-crosshairs"></i> 🔗
+                        <p><a href="https://www.linkedin.com/in/gourab-ghose-6003445077gg" target="_blank">LinkedIn Profile</a></p>
                     </li>
                     <li class="contact-info">
-                        <i class="fa-solid fa-location-crosshairs"></i>
-                        <p>Monday - friday: 9:00 AM - 5:00 PM</p>
-                    </li>
-                    <li class="contact-info">
-                        <i class="fa-solid fa-location-crosshairs"></i>
-                        <p>Sunday: Closed</p>
-                    </li>
-                    <li class="contact-info">
-                        <i class="fa-solid fa-location-crosshairs"></i>
-                        <p>www.codingnepalweb.com</p>
+                        <i class="fa-solid fa-location-crosshairs"></i> 📧
+                        <p><a href="mailto:gourabg83@gmail.com">gourabg83@gmail.com</a></p>
                     </li>
                 </ul>
 
