--- a/index.html
+++ b/index.html
@@ -125,33 +125,33 @@
             </div>
         </section>
         <!--gallery section-->
+        <!-- index.html -->
+        <!--gallery section-->
         <section class="gallery-section" id="gallery">
             <h2 class="section-title">Gallery</h2>
             <div class="section-content">
                 <ul class="gallery-list">
                     <li class="gallery-item">
-                        <img src="ahead of time (dexlabs final).png" alt="Gallery"
-                        class="gallery-image">
+                        <a href="gallery-detail-1.html"> <!--* Link to the first detail page --> 
+                            <img src="ahead of time (dexlabs final).png" alt="Gallery Preview 1"
+                            class="gallery-image">
+                        </a>
                     </li>
                     <li class="gallery-item">
-                        <img src="art & data ( dexlabs final).png" alt="Gallery"
-                        class="gallery-image">
+                        <a href="gallery-detail-2.html">  <!-- Link to the second detail page --> 
+                            <img src="art & data ( dexlabs final).png" alt="Gallery Preview 2"
+                            class="gallery-image">
+                        </a>
                     </li>
                     <li class="gallery-item">
-                        <img src="psychology (dexlabs final).png" alt="Gallery"
-                        class="gallery-image">
+                        <a href="gallery-detail-3.html"> <!-- Link to the third detail page --> 
+                            <img src="psychology (dexlabs final).png" alt="Gallery Preview 3"
+                            class="gallery-image">
+                        </a>
                     </li>
                 </ul>
             </div>
         </section>
-        <!-- Blog Section 
-        <section id="blog">
-            <h2>Write a Blog Post</h2>
-            <textarea id="blogInput" placeholder="Write your blog post here..."></textarea>
-            <button onclick="postBlog()">Post</button>
-            <h2>Recent Blogs</h2>
-            <div id="blogSection"></div>
-        </section>-->
         <!--contact section-->
         <section class="contact-section" id="contact">
             <h2 class="section-title">Contact Us</h2>
