modifications in subgall

--- a/gallery-detail-1.html
+++ b/gallery-detail-1.html
@@ -26,6 +26,18 @@
             background-color: var(--secondary-color);
             color: var(--dark-color);
         }
+
+        body {
+            background-color: #383832; /* Set page background to black */
+        }
+
+        .gallery-section .section-title {
+            color: rgb(255, 255, 255); /* Make the section title (e.g., "Detailed View: Project Name") white */
+        }
+
+        .gallery-section .section-title::after {
+            display: none; /* This will hide the underline */
+        }
     </style>
 </head>
 <body>
