--- a/gallery-detail-2.html
+++ b/gallery-detail-2.html
@@ -26,6 +26,14 @@
             background-color: var(--secondary-color);
             color: var(--dark-color);
         }
+
+        body {
+            background-color: #3a3a34; /* Set page background to black */
+        }
+
+        .gallery-section .section-title {
+            color: rgb(255, 255, 255); /* Make the section title (e.g., "Detailed View: Project Name") white */
+        }
     </style>
 </head>
 <body>
